--- a/jewelry/notebook.ipynb
+++ b/jewelry/notebook.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# MongoDB Credit Card Agent Example\n",
+    "# Jewelry store Agent Example\n",
     "\n",
     "## Table of Contents\n",
     "1. [Introduction](#Introduction)\n",
@@ -15,8 +15,9 @@
     "\n",
     "## Introduction\n",
     "This notebook demonstrates how to set up and run an agent with a couple of tools.<br>\n",
-    "The first tool is a simple RAG that is ingested with Gordon Ramsay's recipe for Beef Wellington, and the second tool is a Wikipedia search engine.<br>\n",
-    "It covers the deployment of the controller, workflow, and UI components, as well as ingesting the recipe data."
+    "The Agent is connected to a sql database with customers and products.<br>\n",
+    "The agent will recommend products to customers based on their preferences, and purchase history.<br>\n",
+    "The agent also has access to a rag tool, containing information about the store's policy.<br>"
    ]
   },
   {
